// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TSP Map View should pan and zoom to show bounding box 1`] = `
<Map
  bounds={
    Object {
      "_northEast": Object {
        "lat": 10,
        "lng": 20,
      },
      "_southWest": Object {
        "lat": -1,
        "lng": -2,
      },
    }
  }
  onClick={[MockFunction]}
  style={
    Object {
      "height": "calc(100vh - 192px)",
      "width": "100%",
    }
  }
  zoomControl={false}
>
  <ForwardRef(Leaflet(TileLayer))
    attribution="© <a href='http://osm.org/copyright'>OpenStreetMap</a> contributors"
    url="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
  />
  <ForwardRef(Leaflet(ZoomControl))
    position="topright"
  />
  <ForwardRef(Leaflet(Marker))
    icon={
      NewClass {
        "_initHooksCalled": true,
        "options": Object {
          "iconAnchor": Array [
            12,
            12,
          ],
          "iconSize": Array [
            24,
            24,
          ],
          "iconUrl": "if_big_house-home_2222740.png",
          "popupAnchor": Array [
            0,
            -10,
          ],
          "shadowAnchor": Array [
            16,
            2,
          ],
          "shadowSize": Array [
            50,
            16,
          ],
          "shadowUrl": "if_big_house-home_2222740_shadow.png",
        },
      }
    }
    key="1"
    onClick={[Function]}
    position={
      Object {
        "id": 1,
        "lat": 1.345678,
        "lng": 1.345678,
      }
    }
  >
    <ForwardRef(Leaflet(Tooltip))
      key="1T"
      permanent={true}
    >
      Location 1 [Lat=1.345678, Lng=1.345678]
    </ForwardRef(Leaflet(Tooltip))>
  </ForwardRef(Leaflet(Marker))>
  <ForwardRef(Leaflet(Marker))
    icon={
      NewClass {
        "_initHooksCalled": true,
        "options": Object {},
      }
    }
    key="2"
    onClick={[Function]}
    position={
      Object {
        "id": 2,
        "lat": 2.345678,
        "lng": 2.345678,
      }
    }
  >
    <ForwardRef(Leaflet(Tooltip))
      key="2t"
      permanent={false}
    >
      Location 2 [Lat=2.345678, Lng=2.345678]
    </ForwardRef(Leaflet(Tooltip))>
  </ForwardRef(Leaflet(Marker))>
  <ForwardRef(Leaflet(Marker))
    icon={
      NewClass {
        "_initHooksCalled": true,
        "options": Object {},
      }
    }
    key="3"
    onClick={[Function]}
    position={
      Object {
        "id": 3,
        "lat": 3.676111,
        "lng": 3.568333,
      }
    }
  >
    <ForwardRef(Leaflet(Tooltip))
      key="3t"
      permanent={false}
    >
      Location 3 [Lat=3.676111, Lng=3.568333]
    </ForwardRef(Leaflet(Tooltip))>
  </ForwardRef(Leaflet(Marker))>
  <ForwardRef(Leaflet(Polyline))
    color="deepskyblue"
    fill={false}
    key="0"
    positions={
      Array [
        Array [
          0.111222,
          0.222333,
        ],
        Array [
          0.444555,
          0.555666,
        ],
      ]
    }
  />
  <ForwardRef(Leaflet(Rectangle))
    bounds={
      Object {
        "_northEast": Object {
          "lat": 10,
          "lng": 20,
        },
        "_southWest": Object {
          "lat": -1,
          "lng": -2,
        },
      }
    }
    color="seagreen"
    dashArray="10,5"
    fill={false}
    weight={1}
  />
</Map>
`;

exports[`TSP Map View should show the whole world when bounding box is null 1`] = `
<Map
  center={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
  onClick={[MockFunction]}
  style={
    Object {
      "height": "calc(100vh - 192px)",
      "width": "100%",
    }
  }
  zoom={2}
  zoomControl={false}
>
  <ForwardRef(Leaflet(TileLayer))
    attribution="© <a href='http://osm.org/copyright'>OpenStreetMap</a> contributors"
    url="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
  />
  <ForwardRef(Leaflet(ZoomControl))
    position="topright"
  />
  <ForwardRef(Leaflet(Marker))
    icon={
      NewClass {
        "_initHooksCalled": true,
        "options": Object {
          "iconAnchor": Array [
            12,
            12,
          ],
          "iconSize": Array [
            24,
            24,
          ],
          "iconUrl": "if_big_house-home_2222740.png",
          "popupAnchor": Array [
            0,
            -10,
          ],
          "shadowAnchor": Array [
            16,
            2,
          ],
          "shadowSize": Array [
            50,
            16,
          ],
          "shadowUrl": "if_big_house-home_2222740_shadow.png",
        },
      }
    }
    key="1"
    onClick={[Function]}
    position={
      Object {
        "id": 1,
        "lat": 1.345678,
        "lng": 1.345678,
      }
    }
  >
    <ForwardRef(Leaflet(Tooltip))
      key="1T"
      permanent={true}
    >
      Location 1 [Lat=1.345678, Lng=1.345678]
    </ForwardRef(Leaflet(Tooltip))>
  </ForwardRef(Leaflet(Marker))>
  <ForwardRef(Leaflet(Polyline))
    color="deepskyblue"
    fill={false}
    key="0"
    positions={Array []}
  />
</Map>
`;
